# mcanitexgen

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  ci.yml  mypy.ini  pyproject.toml  setup.py  tasks.py  tbump.toml
.github/workflows/: CI.yml  ci.yml  python-package.yml  python-publish.yml  test_and_release.yml
examples/: README.md
examples/dog/: README.md  dog.animation.py  dream.png.mcmeta  head.png.mcmeta  tail_and_hindlegs.png.mcmeta
examples/steve/: README.md  steve.png.mcmeta
mcanitexgen/: Exceptions.py  Parser.py  TextureAnimation.py  TextureAnimationOld.py  Utils.py  __init__.py  __main__.py  cli.py  expressions.py  generator.py  parser.py  utils.py
mcanitexgen/animation/: generator.py
mcanitexgen/gif/: generator.py
mcanitexgen/integration/: beet.py
src/mcmetagen/: Exceptions.py  Parser.py  TextureAnimation.py  __init__.py
tests/: test_basic_animations.py  test_expression_parser.py  test_expressions.py  test_parse_animation.py  test_parse_independent_animations.py  test_start_end_expressions.py  test_utils.py
tests/animation/: test_animation_examples.py
tests/cli/: test_commands.py  test_convert_to_gif_frames.py  test_functions.py  test_generate.py  test_get_animation_states_from_texture.py  test_gif.py  test_main.py
tests/generator/: test_animation.py  test_append_action_to_animation.py  test_expressions.py  test_marks.py  test_sequence_action_to_animation.py  test_sequences_constant.py  test_sequences_mixed.py  test_sequences_unweighted.py  test_sequences_weighted.py  test_texture_animation.py  test_write_mcmeta_files.py  (+2 more)
(+34 files in other folders)
